Swagger some work
