# routes/api.php
@@ -17,30 +17,4 @@ use Illuminate\Support\Facades\Route;
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
-Route::apiResource('admin/user/info', Api\InfoController::class);
-Route::apiResource('admin/v1/test', Api\TestController::class);
-Route::apiResource('admin/user/info/data/user-info', Api\UserInfoController::class);
-Route::apiResource('admin/user/info', Api\InfoController::class);
-Route::apiResource('admin/user/info', Api\InfoController::class);
-Route::apiResource('admin/v1/users', Api\UsersController::class);
-Route::apiResource('admin/user/info', Api\InfoController::class);
-Route::apiResource('admin/v1/users/test', Api\TestController::class);
-Route::apiResource('admin/user/info', Api\InfoController::class);
-Route::apiResource('admin/v1/users', Api\UsersController::class);
-Route::apiResource('admin/user/info', Api\InfoController::class);
-Route::apiResource('admin/v1/test', Api\TestController::class);
-Route::apiResource('admin/blogs', Api\BlogsController::class);
-Route::apiResource('admin/user/info', Api\InfoController::class);
-Route::apiResource('admin/user/info', Api\InfoController::class);
-Route::apiResource('admin/user/info', Api\InfoController::class);
-Route::apiResource('admin/user/info', Api\InfoController::class);
-Route::apiResource('admin/v1/test', Api\TestController::class);
-Route::apiResource('admin/v1/users', Api\UsersController::class);
-Route::apiResource('admin/user/info', Api\InfoController::class);
-Route::apiResource('admin/v1/users', Api\UsersController::class);
-Route::apiResource('admin/user/info', Api\InfoController::class);
-Route::apiResource('admin/blogs', Api\BlogsController::class);
-Route::apiResource('admin/v1/users', Api\UsersController::class);
-Route::apiResource('admin/v1/test', Api\TestController::class);
-Route::apiResource('admin/user/info', Api\InfoController::class);
-Route::apiResource('admin/v1/users', Api\UsersController::class);
+
